<resources>
    <string name="app_name">Sportive</string>
    <string name="home">Trang chủ</string>
    <string name="booking">Lịch đặt</string>
    <string name="profile">Cá nhân</string>
    <string name="online_field_booking">Đặt sân trực tuyến </string>
    <string name="played_field">Sân chơi trước đây</string>
    <string name="field_near_you">Sân gần bạn</string>
    <string name="search">Tìm kiếm</string>
    <string name="map">Bản đồ</string>
    <string name="select">Chọn</string>
    <string name="field_position">Vị trí</string>
    <string name="play_time">Giờ bắt đầu</string>
    <string name="duration">Thời lượng</string>
    <string name="play_date">Ngày chơi</string>
    <string name="ranking_and_rating">Xếp hạng và đánh giá</string>
    <string name="field_booking">Đặt sân</string>
    <string name="field_canceling">Huỷ sân</string>
    <string name="played_history">Lịch sử đá</string>
    <string name="fast_booking">Chọn sân nhanh</string>
    <string name="choose_play_time">Chọn giờ bắt đầu</string>
    <string name="district">Quận</string>
    <string name="detail">Chi tiết</string>
    <string name="email">Gmail</string>
    <string name="username">Họ tên</string>
    <string name="password">Mật khẩu</string>
    <string name="change_time">Đổi lịch</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="you_have_account">Bạn đã có tài khoản?</string>
    <string name="you_dont_have_account">Bạn chưa có tài khoản?</string>
    <string name="sign_up_here">Hãy đăng ký</string>
    <string name="sign_in_here">Hãy đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="reset_password">Reset Mật khẩu</string>

    <!-- Duration Spinner List -->
    <string-array name="duration_spinner_list">
        <item>1 Giờ</item>
        <item>2 Giờ</item>
        <item>3 Giờ</item>
        <item>4 Giờ</item>
        <item>5 Giờ</item>
        <item>6 Giờ</item>
    </string-array>
    <string name="title_activity_test">Map</string>
</resources>
