<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_10">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_10"
        android:text="@string/played_history"
        android:textColor="@color/blue_500"
        android:textSize="@dimen/font_18_title"
        android:textStyle="bold"></TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_10"
        android:orientation="horizontal"
        android:visibility="visible">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/edt_played_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/spacing_10"
                android:layout_toLeftOf="@id/btn_select"
                android:drawableLeft="@drawable/ic_star_black_24dp"
                android:drawablePadding="@dimen/spacing_8"
                android:editable="false"
                android:paddingBottom="@dimen/spacing_18"
                android:text="@string/played_field"></EditText>


            <Button
                android:id="@+id/btn_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/spacing_10"
                android:background="@drawable/border_circular"
                android:text="@string/select"
                android:textColor="@color/white">

            </Button>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_10"
        android:paddingTop="@dimen/spacing_10"
        android:text="@string/online_field_booking"
        android:textColor="@color/blue_500"
        android:textSize="@dimen/font_18_title"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_10"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/btn_location"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_10"
                    android:text="@string/field_position"
                    android:textSize="@dimen/font_16_subtitle"></TextView>


                <EditText
                    android:id="@+id/edt_near_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_location_on_black_24dp"
                    android:drawablePadding="@dimen/spacing_8"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:paddingBottom="@dimen/spacing_18"
                    android:text="@string/field_near_you"></EditText>
            </LinearLayout>

            <ImageView
                android:id="@+id/btn_location"
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/spacing_20"
                android:clickable="true"
                android:src="@drawable/ic_my_location_blue_24dp"></ImageView>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_10"
                    android:text="@string/play_date"
                    android:textSize="@dimen/font_16_subtitle"></TextView>


                <EditText
                    android:id="@+id/edt_play_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_perm_contact_calendar_black_24dp"
                    android:drawablePadding="@dimen/spacing_8"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:paddingBottom="@dimen/spacing_18"
                    android:text="Thứ 7, 07/04/2020"></EditText>
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_10"
                android:text="@string/play_time"
                android:textSize="@dimen/font_16_subtitle"></TextView>


            <EditText
                android:id="@+id/edt_play_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_access_time_black_24dp"
                android:drawablePadding="@dimen/spacing_8"
                android:editable="false"
                android:focusableInTouchMode="false"
                android:paddingBottom="@dimen/spacing_18"
                android:text="6h30"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/spacing_20"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="@dimen/font_16_subtitle"></TextView>


            <Spinner
                android:id="@+id/spinner_duration"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </Spinner>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10">


        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_10"
            android:layout_weight="8"
            android:background="@drawable/border_circular"
            android:text="@string/search"
            android:textColor="@color/white"></Button>

        <ImageButton
            android:id="@+id/btn_map"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/spacing_10"
            android:layout_marginTop="@dimen/spacing_10"
            android:layout_weight="2"
            android:background="@color/gray_4"
            android:src="@drawable/ic_map_blue_24dp"
            android:textColor="@color/white"></ImageButton>
    </LinearLayout>

</LinearLayout>